--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-standalone-application/.idea
-standalone-application/.gradle
-standalone-application/gradle
-standalone-application/gradlew*
+*/.idea
+*/.gradle
+*/gradle
+*/gradlew*
+*/build
