--- a/standalone-application/build.gradle
+++ b/standalone-application/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'java'
 }
-
+ext {
+    postgresVersion = '42.3.3'
+}
 group 'itmo.web-services'
 version 'standalone'
 
@@ -10,8 +12,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation("org.postgresql:postgresql:$postgresVersion")
 }
 
 test {
