--- a/standalone-application/build.gradle
+++ b/standalone-application/build.gradle
@@ -13,6 +13,8 @@ repositories {
 
 dependencies {
     implementation("org.postgresql:postgresql:$postgresVersion")
+    implementation('com.sun.xml.ws:webservices-rt:2.0.1')
+    implementation('com.sun.xml.bind:jaxb-impl:3.0.2')
 }
 
 test {
