--- a/java-ee-application/build.gradle
+++ b/java-ee-application/build.gradle
@@ -11,7 +11,6 @@ repositories {
 }
 
 ext {
-    junitVersion = '5.8.1'
 }
 
 sourceCompatibility = '1.8'
@@ -22,12 +21,13 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    compileOnly('javax.enterprise:cdi-api:2.0.SP1')
-    compileOnly('javax.ws.rs:javax.ws.rs-api:2.1.1')
-    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+    implementation 'javax.xml.ws:jaxws-api:2.3.1'
+    implementation 'javax.jws:javax.jws-api:1.1'
+}
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+war {
+    enabled = true
+    archiveName 'books.war'
 }
 
 test {
