--- a/java-ee-rest-application/build.gradle
+++ b/java-ee-rest-application/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'war'
 }
 
-group 'itmo.web_services'
-version 'rest-war'
+group 'itmo.web-services'
+version 'books-rest'
 
 repositories {
     mavenCentral()
@@ -26,14 +26,15 @@ dependencies {
     implementation "com.sun.jersey:jersey-servlet:1.19.4"
     implementation "com.sun.jersey:jersey-grizzly2:1.19.4"
     implementation "com.sun.jersey:jersey-json:1.19.4"
-    implementation "javax:javaee-web-api:8.0"
+    implementation 'javax:javaee-web-api:8.0.1'
 
-    implementation "org.postgresql:postgresql:9.4-1201-jdbc4"
+    implementation 'org.postgresql:postgresql:42.3.3'
 }
 
 war {
     enabled = true
 }
+
 test {
     useJUnitPlatform()
 }
