--- a/rest-client/build.gradle
+++ b/rest-client/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation('com.sun.jersey:jersey-json:1.19.4')
     implementation('com.sun.jersey:jersey-client:1.19.4')
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8")
 }
 
 test {
